--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2221,6 +2221,53 @@
 			box-shadow: inset 0 0 0 1px #d6d6d6;
 		}
 
+
+/* timeline */ 
+*{margin: 0;padding: 0;}
+body {
+  background: white;
+}
+
+#container
+{
+height: 550px;
+width: 100%;
+background-color: #ddd;
+overflow: hidden;
+position: relative;
+overflow-x: scroll;
+margin-top: 20px;
+display: inline-block;
+}
+
+#thumbs
+{
+background-color: #effbfc;
+position: absolute;
+top: 0px;
+left: 0px;
+height: 100%;
+width: auto;
+overflow: hidden;
+white-space: nowrap;
+padding: 30px 30px;
+}
+
+.image {
+  background-size:cover;
+}
+
+.image a{
+    background-size: cover;
+}
+
+.image img {
+    position: relative;
+    height: 500px;
+    background-size: cover;
+}
+
+
 /* Wide */
 
 	@media screen and (max-width: 1680px) {
@@ -2474,11 +2521,13 @@
 				width: 100%;
 				border-radius: 4px;
 				overflow: hidden;
+                height: 250px;
 			}
 
 				.tiles article > .image img {
 					display: block;
 					width: 100%;
+                    height: 250px;
 				}
 
 				.tiles article > .image:before {
