--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2000,6 +2000,50 @@ button.alt:hover,
     display: none;
 }
 
+/* Promo */
+#promo {
+    background: rgba(255, 255, 255, 0.05);
+    border: solid 1px rgba(255, 255, 255, 0.25);
+    border-radius: 0.5em;
+    padding: 1.75em 2.5em 1.75em 2.5em;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    padding: 10px;
+}
+
+#promo h2 {
+    color: #fff;
+    display: inline-block;
+    margin-right: 1em;
+    font-size: 1.75em;
+}
+
+#promo .button {
+    background: #fff;
+    border-color: rgba(255, 255, 255, 0);
+    color: #27636B;
+    font-size: 1.25em;
+}
+
+#promo .button:hover {
+    border-color: rgba(255, 255, 255, 0.75);
+    background-color: rgba(255, 255, 255, 0.15);
+    color: #fff;
+}
+
+#promo-wrapper {
+    position: relative;
+    background-color: #effbfc;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top left, center center;
+    color: #fff;
+    text-align: center;
+    padding: 1em 0 1em 0;
+    margin: 2px;
+}
+
 /* Nav Bar */
 ul {
     list-style-type: none;
